--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <h1 id="title">uday's drum kit</h1>
   <div class="set">
-    <button class="w drum"><🤡/button>
+    <button class="w drum">🤡</button>
     <button class="a drum">a</button>
     <button class="s drum">s</button>
     <button class="d drum">d</button>
