--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <button class="j drum">j</button>
     <button class="k drum">k</button>
     <button class="l drum">l</button>
-    <button class="a drum">A</button>
+    <button class="A drum">A</button>
   </div>
 
 
