--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
 
-  <h1 id="title">uday's drum kit</h1>
+  <h1 id="title">uday's( DOREMON ) drum kit</h1>
+ <h2> IN THIS "A" IS SPECIAL 
   <div class="set">
     <button class="w drum">🤡</button>
     <button class="a drum">a</button>
