--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-  <h1 id="title">uday's( DOREMON ) drum kit</h1>
+  <h1 id="title">uday's( DORAEMON ) drum kit</h1>
  <h2> IN THIS "A" IS SPECIAL 
   <div class="set">
     <button class="w drum">🤡</button>
